--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   mime: ^1.0.4
   dropdown_model_list: ^0.0.4
   collection: ^1.17.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
