--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   dropdown_model_list: ^0.0.4
   collection: ^1.17.1
   shimmer: ^3.0.0
+  image_picker: ^1.0.2
 
 dev_dependencies:
   flutter_test:
