--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   collection: ^1.17.1
   shimmer: ^3.0.0
   image_picker: ^1.0.2
+  firebase_messaging: ^14.6.7
 
 dev_dependencies:
   flutter_test:
