--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ dependencies:
   shimmer: ^3.0.0
   image_picker: ^1.0.2
   firebase_messaging: ^14.6.7
+  flutter_local_notifications: ^15.1.1
+  firebase_analytics: ^10.4.5
+  emoji_picker_flutter: ^1.6.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
