--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   firebase_analytics: ^10.4.5
   emoji_picker_flutter: ^1.6.1
   cached_network_image: ^3.2.3
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
