--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   font_awesome_flutter: ^10.4.0
   intl: ^0.17.0
+  timeago:
   flutter_quill: ^7.2.10
   omni_datetime_picker: ^1.0.7
   date_time_picker: ^2.1.0
