--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   cached_network_image: ^3.2.3
   fl_chart: ^0.63.0
   quickalert: ^1.0.2
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
